tests/toy/neg/001681_mutation.toylang
program a = { while if do sleep; } .
